--- a/prep/bd/hab/v2020/corals_data_prep.Rmd
+++ b/prep/bd/hab/v2020/corals_data_prep.Rmd
@@ -118,15 +118,17 @@ zones_og <- ggplot() +
                                "#f7be16", "#e3dfc8", 
                                "#838383", "#63b7af", "#bae5e5",
                                "#c9d1d3", "#ee8572", "#519872")) + 
+  labs(fill = "Coral Zones",
+       title = "Coral Reef Zones: Raw Data") +
   theme_minimal() + 
   theme(legend.position = "bottom",
+        legend.text = element_text(size = 8), 
+        legend.title = element_text(size = 10),
         legend.key = element_rect(fill = "transparent", colour = "transparent"),
         panel.background = element_rect(fill = "transparent",colour = NA),
         plot.background = element_rect(fill = "transparent",colour = NA),
         legend.background = element_blank(),
-        legend.box.background = element_blank()) +
-  labs(fill = "Coral Reef Zones") +
-  ggtitle("Raw Data Coral Reef Zones")
+        legend.box.background = element_blank()) 
 
 # Coral zones - reclassified 
 zones_reclass <- ggplot() + 
@@ -135,15 +137,17 @@ zones_reclass <- ggplot() +
                                "Lagoon", "Reef Crest"), 
                     values = c("#408ab4", "#63b7af",
                                "#bae5e5", "#ee8572")) +
+  labs(fill = "Coral Zones",
+       title = "Coral Reef Zones: Reclassified") +
   theme_minimal() + 
   theme(legend.position = "bottom",
+        legend.text = element_text(size = 8), 
+        legend.title = element_text(size = 10),
         legend.key = element_rect(fill = "transparent", colour = "transparent"),
         panel.background = element_rect(fill = "transparent",colour = NA),
         plot.background = element_rect(fill = "transparent",colour = NA),
         legend.background = element_blank(),
-        legend.box.background = element_blank()) +
-  labs(fill = "Coral Reef Zones") +
-  ggtitle("Reclassified Coral Reef Zones")
+        legend.box.background = element_blank()) 
 
 # Coral cover percent - original data
 cover_og <- ggplot() + 
@@ -154,15 +158,17 @@ cover_og <- ggplot() +
                     values = c("#d2ebcd", "#aed09e", 
                                "#64a36f", "#28544b",
                                "#c9d1d3")) +
+  labs(fill = "Percent Live\nCoral Cover",
+       title = "Live Coral Cover: Raw Data") +
   theme_minimal() + 
   theme(legend.position = "bottom",
+        legend.text = element_text(size = 8), 
+        legend.title = element_text(size = 10),
         legend.key = element_rect(fill = "transparent", colour = "transparent"),
         panel.background = element_rect(fill = "transparent",colour = NA),
         plot.background = element_rect(fill = "transparent",colour = NA),
         legend.background = element_blank(),
-        legend.box.background = element_blank()) +
-  labs(fill = "Live Coral Cover Percent") +
-  ggtitle("Raw Data Live Coral Cover Percent")
+        legend.box.background = element_blank())
 
 # Coral cover percent - reclassified 
 cover_reclass <- ggplot() + 
@@ -173,15 +179,17 @@ cover_reclass <- ggplot() +
                     values = c("#d2ebcd", "#aed09e", 
                                "#64a36f", "#28544b",
                                "#c9d1d3")) +
+  labs(fill = "Percent Live\nCoral Cover",
+       title = "Live Coral Cover: Reclassified") +
   theme_minimal() + 
   theme(legend.position = "bottom",
+        legend.text = element_text(size = 8), 
+        legend.title = element_text(size = 10),
         legend.key = element_rect(fill = "transparent", colour = "transparent"),
         panel.background = element_rect(fill = "transparent",colour = NA),
         plot.background = element_rect(fill = "transparent",colour = NA),
         legend.background = element_blank(),
-        legend.box.background = element_blank()) +
-  labs(fill = "Live Coral Cover Percent") +
-  ggtitle("Reclassified Live Coral Cover Percent")
+        legend.box.background = element_blank())
 
 
 # Print all maps
