--- a/prep/rao/v2020/rao_data_prep.Rmd
+++ b/prep/rao/v2020/rao_data_prep.Rmd
@@ -19,11 +19,11 @@ output:
 
 # Summary 
 
-This script generates a temporary layer to use in place of a status score for the Resource Access Opportunities goal. 
+This script calculates a status score for access to sustenance fishing opportunities around Palmyra Atoll from 2014 - 2020.   
 
 # Data
 
-Data for this layer is supposed to come from the fishing log on Palmyra Atoll. The log was not digitized at the time of the assessment and therefore couldn't be used. 
+Data for this layer is supposed to come from the fishing log on Palmyra Atoll. The log was not digitized at the time of the assessment, but estimates were obtained via email from Stefan Kropidlowski at the U.S. Fish and Wildlife Service on August 18, 2020. 
 
 # Setup
 
@@ -41,28 +41,51 @@ dir_goal   <- '~/github/pal-prep/prep/rao/v2020'
 
 # Methods
 
-The toolbox requires the layer to have a column for region_id, year, and status (a score 0-1). For trend we like to have five years of data, so the years will span 2014-2020, but since the data is not available to complete this layer in time for the assessment, a placeholder with a value of NA will be used.   
+The USFWS estimates about 20 fish are caught each year for sustenance fishing. We will use this estimate for all years from 2014 - 2020. These estimates should be updated once the sustenance fishing log on Palmyra Atoll is digitized.   
 
-## Create Temporary Layer 
+## Create Raw Data 
 
-```{r create-temp-layer, eval=F}
+```{r create-raw-data, eval=F}
 # Set years 
 years <- 2014:2020
 
-rao_status <- data.frame(
+catch_raw <- data.frame(
   region_id = rep(1, length(years)), 
   year = years, 
-  status = rep(NA, length(years))
+  catch = rep(20, length(years))
 )
 
-# Save placeholder to output
-write_csv(rao_status, file.path(dir_goal, "output/rao_status_placeholder.csv"))
+# Save to raw 
+write_csv(catch_raw, file.path(dir_goal, "raw/catch_raw.csv"))
+```
+
+## Calculate Status 
+
+**Reference Point:** Up to 20 fish caught for sustenance by residents of Palmyra Atoll per year. 
+
+The current status will be calculated as the number of fish caught per year over the reference point, as in the following equation:   
+
+$status~=~catch_{y}~/~catch_{ref,y}$   
+
+Where $catch_{y}$ is the catch in each year (y) and $catch_{ref,y}$ is the reference point catch in year (y).  
+
+```{r calculate-status, eval=F}
+
+catch <- read_csv(file.path(dir_goal, "raw/catch_raw.csv"))
+
+rao_status <- catch %>% 
+  mutate(ref = 20,
+         status = catch / ref) %>% 
+  dplyr::select(region_id, year, status)
+
+# Save to output folder
+write_csv(rao_status, file.path(dir_goal, "output/rao_status.csv"))
 ```
 
 ## Save to Toolbox
 
 ```{r save-to-toolbox, eval=F, message=F, warning=F}
-rao_status <- read_csv(file.path(dir_goal, "output/rao_status_placeholder.csv"))
-write_csv(rao_status, file.path(dir_scores, "layers/rao_status_placeholder.csv"))
+rao_status <- read_csv(file.path(dir_goal, "output/rao_status.csv"))
+write_csv(rao_status, file.path(dir_scores, "layers/rao_status.csv"))
 ```
 
