--- a/prep/rao/v2020/rao_data_prep.Rmd
+++ b/prep/rao/v2020/rao_data_prep.Rmd
@@ -63,11 +63,11 @@ write_csv(catch_raw, file.path(dir_goal, "raw/catch_raw.csv"))
 
 **Reference Point:** Up to 20 fish caught for sustenance by residents of Palmyra Atoll per year. 
 
-The current status will be calculated as the number of fish caught per year over the reference point, as in the following equation:   
+The current status will be scaled to the reference point using the following equation:      
 
-$status~=~catch_{y}~/~catch_{ref,y}$   
+$status~=~1~-~[(catch_{y}~-catch_{ref,y})~/~catch_{ref,y}]$   
 
-Where $catch_{y}$ is the catch in each year (y) and $catch_{ref,y}$ is the reference point catch in year (y).  
+Where $catch_{y}$ is the catch in each year (y) and $catch_{ref,y}$ is the reference point catch in year (y). Any value greater than one will be given a status of one, and any value less than zero will be given a zero. This gives a perfect score to any year where the number of fish caught is at or below the reference point and a zero if the number of fish caught is double or more than double the reference point. This method of scoring is based on The Nature Conservancy's management goals to keep fishing at or below the reference point level and reflective of the view that fishing at more than twice the reference point would cause serious damage to the ecosystem.        
 
 ```{r calculate-status, eval=F}
 
@@ -75,7 +75,8 @@ catch <- read_csv(file.path(dir_goal, "raw/catch_raw.csv"))
 
 rao_status <- catch %>% 
   mutate(ref = 20,
-         status = catch / ref) %>% 
+         status = 1 - (catch - ref) / ref) %>% 
+  mutate(status = ifelse(status > 1, 1, status)) %>% 
   dplyr::select(region_id, year, status)
 
 # Save to output folder
