--- a/prep/tr/v2020/tr_data_prep.Rmd
+++ b/prep/tr/v2020/tr_data_prep.Rmd
@@ -19,11 +19,11 @@ output:
 
 # Summary 
 
-This script generates a temporary layer to use in place of a status score for the Tourism and Recreation goal. 
+This script status score for tourism and recreation based on the number of private visiting vessels per year from 2014 - 2020.    
 
 # Data
 
-Data for this layer is supposed to come from the boat visitation log on Palmyra Atoll. The log was not digitized at the time of the assessment and therefore couldn't be used. 
+Data for this layer is supposed to come from the boat visitation log on Palmyra Atoll. The log was not digitized at the time of the assessment, but estimates were obtained via email from Stefan Kropidlowski at the U.S. Fish and Wildlife Service on August 18, 2020.    
 
 # Setup
 
@@ -41,28 +41,52 @@ dir_goal   <- '~/github/pal-prep/prep/tr/v2020'
 
 # Methods
 
-The toolbox requires the layer to have a column for region_id, year, and status (a score 0-1). For trend we like to have five years of data, so the years will span 2014-2020, but since the data is not available to complete this layer in time for the assessment, a placeholder with a value of NA will be used.   
+The USFWS estimates about three private vessels visit Palmyra each year. We will use this estimate for all years from 2014 - 2020. These estimates should be updated once the boat visitation log on Palmyra Atoll is digitized.       
 
-## Create Temporary Layer 
+## Create Raw Data 
 
-```{r create-temp-layer, eval=F}
+```{r create-raw-data, eval=F}
 # Set years 
 years <- 2014:2020
 
-tr_status <- data.frame(
+visits_raw <- data.frame(
   region_id = rep(1, length(years)), 
   year = years, 
-  status = rep(NA, length(years))
+  visits = rep(3, length(years))
 )
 
-# Save placeholder to output
-write_csv(tr_status, file.path(dir_goal, "output/tr_status_placeholder.csv"))
+# Save to raw 
+write_csv(visits_raw, file.path(dir_goal, "raw/boat_visits_raw.csv"))
+```
+
+## Calculate Status 
+
+**Reference Point:** Up to 6 private vessels visiting Palmyra Atoll per year. 
+
+The current status will be scaled to the reference point using the following equation:      
+
+$status~=~1~-~[(vessels_{y}~-vessels_{ref,y})~/~vessels_{ref,y}]$   
+
+Where $vessels_{y}$ is the number of private vessels coming to the island in each year (y) and $vessel_{ref,y}$ is the reference point number of private vessels coming to the island in year (y). Any value greater than one will be given a status of one, and any value less than zero will be given a zero. This gives a perfect score to any year where the number of visiting vessels is at or below the reference point and a zero if the number of visiting vessels is double or more than double the reference point. This method of scoring is based on The Nature Conservancy's management goals to keep tourism at or below the reference point level and reflective of the view that having double the number of private vessels visiting each year would cause serious damage to the ecosystem.        
+
+```{r calculate-status, eval=F}
+
+vessels <- read_csv(file.path(dir_goal, "raw/boat_visits_raw.csv"))
+
+tr_status <- vessels %>% 
+  mutate(ref = 3,
+         status = 1 - (visits - ref) / ref) %>% 
+  mutate(status = ifelse(status > 1, 1, status)) %>% 
+  dplyr::select(region_id, year, status)
+
+# Save to output folder
+write_csv(rao_status, file.path(dir_goal, "output/tr_status.csv"))
 ```
 
 ## Save to Toolbox
 
 ```{r save-to-toolbox, eval=F}
-tr_status <- read_csv(file.path(dir_goal, "output/tr_status_placeholder.csv"))
-write_csv(tr_status, file.path(dir_scores, "layers/tr_status_placeholder.csv"))
+tr_status <- read_csv(file.path(dir_goal, "output/tr_status.csv"))
+write_csv(tr_status, file.path(dir_scores, "layers/tr_status.csv"))
 ```
 
