--- a/prep/pressures/uv/v2020/uv_pressure_layer.Rmd
+++ b/prep/pressures/uv/v2020/uv_pressure_layer.Rmd
@@ -1,27 +1,29 @@
 ---
-title: 'OHI+ Palmyra 2020: UV Radiation Pressure'
+title: 'Ultraviolet Radiation Pressure'
+subtitle: 'OHI+ Palmyra 2020 Assessment'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
+    code_folding: show
     toc: true
-    toc_depth: 2 
+    toc_depth: 3 
     toc_float: yes
     number_sections: false
     theme: cerulean
     highlight: haddock
     includes: 
-     in_header: '../../../src/templates/ohi_hdr.html' 
+     in_header: '~/github/pal-prep/src/templates/pal_hdr.html' 
   pdf_document:
     toc: true
 ---
 
 # Summary 
 
-The Ultraviolet Radiation pressure layer is generated from daily data on Local Noon Erythemal UV Irradiance (mW/m2) derived from satellite observations. 
+The Ultraviolet Radiation pressure layer is generated from daily data on Local Noon Erythemal UV Irradiance (mW/m2) derived from satellite observations.   
 
-For the global OHI assessment, the raw data is processed into anomaly products. The data product of that process are rasters of total number of weekly anomalies per year. An anomaly is defined as greater than the mean climatology plus 1 standard deviation for that cell across the entire dataset (2005-2016).
+For the global OHI assessment, the raw data is processed into anomaly products. The data product of that process are rasters of total number of weekly anomalies per year. An anomaly is defined as greater than the mean climatology plus 1 standard deviation for that cell across the entire dataset (2005-2016).   
 
-This script takes the global anomaly rasters and crops them to Palmyra. This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.  
+This script takes the global anomaly rasters and crops them to Palmyra. This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.     
 
 ***
 
@@ -43,9 +45,7 @@ The Ultraviolet Radiation pressures layer uses the [Aura OMI GLobal Surface UVB 
 
 # Setup 
 
-```{r setup, message = F, warning = F}
-
-knitr::opts_chunk$set(echo = FALSE)
+```{r setup, message=F, warning=F, results='hide'}
 
 library(tidyverse)
 library(doParallel)
@@ -104,7 +104,8 @@ foreach(f = anom_files) %dopar% {
   raster(f) %>%
     projectRaster(ocean_rast3_100, method = 'ngb') %>%
     crop(usalb_ext3) %>%  
-    mask(ocean_rast3_100, filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
+    mask(ocean_rast3_100, filename = paste0(dir_anx,
+                                            '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
                                              substr(basename(f), 22, 25),'.tif'), overwrite=T)
     
   } else {
@@ -114,19 +115,23 @@ foreach(f = anom_files) %dopar% {
  
 ```
 
-```{r check, eval=F, include=F}
+```{r check-raster-plots, eval=F}
 
 # Check a few rasters to make sure this makes sense:
-check07 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2007.tif'))
-check19 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2019.tif'))
+check07 <- raster(file.path(dir_anx,
+                            '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2007.tif'))
+check19 <- raster(file.path(dir_anx,
+                            '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2019.tif'))
     
 plot(check07, col=cols, 
      main = "Ultraviolet Radiation 2007", 
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+     legend.args=list(text='Anomalous Weeks',
+                      side=4, font=2, line=2.5, cex=0.8))
 
 plot(check19, col=cols, 
      main = "Ultraviolet Radiation 2016",
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+     legend.args=list(text='Anomalous Weeks',
+                      side=4, font=2, line=2.5, cex=0.8))
 
 ```
 
@@ -136,7 +141,8 @@ Visualize the change in radiation anomalies over time.
 
 ```{r gif1, eval=F}
 
-l <- lapply(list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T), raster) %>%
+l <- lapply(list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"),
+                       full.names=T), raster) %>%
                 brick()
 
 names(l) <- paste0("Year", (substr(names(l),13,16))) # Rename each layer for plotting
@@ -149,7 +155,8 @@ saveGIF({
       # don't forget to fix the zlimits
       plot(l[[i]], zlim=c(0,52), axes=F, col=cols,
            main=names(l[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+           legend.args=list(text='Anomalous Weeks',
+                            side=4, font=2, line=2.5, cex=0.8))
       
   }
 }, movie.name = 'uv_annual_anoms.gif')
@@ -164,7 +171,8 @@ Calculate total anomalous weeks for each 5-year period from 2005 - 2019.
 
 ```{r five-year, eval=F}
 
-l <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T)
+l <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"),
+                full.names=T)
 
 # Last 5 year period will start in 2015
 for(i in 2005:2015){ #i=2005
@@ -186,7 +194,8 @@ This time we have decided to use a reference point that represents a regime shif
 
 ```{r rescale, eval=F}
 
-uv_aggs <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms"), full.names=T)
+uv_aggs <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms"),
+                      full.names=T)
 
 # Define the rescale function
 resc_func <- function(x){
@@ -194,10 +203,12 @@ resc_func <- function(x){
   # Get the year from the file for naming the output raster
   yrs <- substr(basename(x), 11, 19)
  
-  # If a cell value is >= the reference point (130 weeks), assign a value of 1, otherwise divide by the reference point
+  # If a cell value is >= the reference point (130 weeks),
+  # assign a value of 1, otherwise divide by the reference point
   raster(x) %>%
   calc(.,fun=function(x){ifelse(x<0, 0, ifelse(x>130, 1, x/130))},
-         filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_rescaled/uv_rescale_', yrs, '.tif'), overwrite=T)
+         filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_rescaled/uv_rescale_',
+                           yrs, '.tif'), overwrite=T)
 }
 
 # Rescale 
@@ -213,7 +224,8 @@ Visualize the change in aggregated radiation anomalies over time.
 
 ```{r gif-rescale, eval=F}
 
-resc <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'), full.names=T), raster) %>% 
+resc <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'),
+                          full.names=T), raster) %>% 
   brick()
 
 names(resc) <- paste0("Years_", (substr(names(resc), 12, 20))) # Rename for plotting
@@ -225,7 +237,8 @@ saveGIF({
       # Don't forget to fix the zlimits
       plot(resc[[i]], zlim=c(0,1), axes=F, col=cols,
            main=names(resc[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+           legend.args=list(text='Anomalous Weeks',
+                            side=4, font=2, line=2.5, cex=0.8))
       
   }
 }, movie.name = 'uv_rescale.gif')
@@ -236,18 +249,18 @@ saveGIF({
 
 ***
 
-# Results
-
-## Scores
+## Calculate Scores
 
 ```{r uv-scores, eval=F}
 
 # Use the rescaled files for scores
-uv_stack <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'),full.names=T), raster) %>%
+uv_stack <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'),
+                              full.names=T), raster) %>%
   brick()
 
 # Find the mean 
-pal_stats <- zonal(uv_stack,  ocean_rast3_100, fun="mean", na.rm=TRUE, progress="text") %>%
+pal_stats <- zonal(uv_stack,  ocean_rast3_100, fun="mean",
+                   na.rm=TRUE, progress="text") %>%
                   data.frame() %>% 
                   clean_names()
 
@@ -270,15 +283,15 @@ write_csv(uv_data, file.path(dir_prs, "output/uv_pressure.csv"))
 ```{r save-to-toolbox, eval=F}
 
 uv_pressure <- read_csv(file.path(dir_prs, "output/uv_pressure.csv"))
-
 write_csv(uv_pressure, file.path(dir_scores, "layers/prs_cc_uv.csv"))
 
 ```
 
+# Results 
 
 ## Final Visualization
 
-```{r uv-viz}
+```{r uv-viz, message=F, warning=F}
 
 uv_data <- read_csv(file.path(dir_prs, "output/uv_pressure.csv"))
 
@@ -292,9 +305,11 @@ ggplot(uv_data, aes(x = year, y = pressure_score)) +
 
 ```
 
+## Google Visualization 
+
 This code chunk creates a google visualization of the scores through time. It unfortunately does not allow the google chart to show up in the RMarkdown knitted document.
 
-```{r googlevis}
+```{r googlevis, eval=F}
 
 library(googleVis)
 
